--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             </div>
           </div>
           <ul class="project-list">
-            <li class="bg-image" style="background-image: url(images/Banner.jpeg)"><a href="#">Basico</a></li>
-            <li class="bg-image" style="background-image: url(images/Banner.jpeg)"><a href="#">Real</a></li>
-            <li class="bg-image" style="background-image: url(images/Banner.jpeg)"><a href="#">Aumentado</a></li>
+            <li class="bg-image" style="background-image: url(images/2.jpeg)"><a href="#">Basico</a></li>
+            <li class="bg-image" style="background-image: url(images/2.jpeg)"><a href="#">Real</a></li>
+            <li class="bg-image" style="background-image: url(images/2.jpeg)"><a href="#">Aumentado</a></li>
           </ul>
         </section>
       </section>
