--- a/about-us.html
+++ b/about-us.html
@@ -169,7 +169,7 @@
       </section>
     
             <!-- Team-->
-          <h4>Equipo</h4>
+          <h3 class="custom-title">Quienes Somos</h3>
             <section class="section section-lg bg-gray-100 section-lined">
               <div class="container container-lined">
                 <div class="row">
