--- a/about-us.html
+++ b/about-us.html
@@ -169,10 +169,13 @@
       </section>
     
             <!-- Team-->
-          <h3 class="custom-title">Equipo</h3>
-            <section class="section section-lg bg-gray-100 section-lined">
-              <div class="container container-lined">
-                <div class="row">
+      <section class="section section-lg bg-gray-100 section-lined">
+        <div class="container">
+          <div class="row row-40 justify-content-between">
+            <div class="col-lg-7">
+              <h3 class="custom-title">Equipo</h3>
+                <div class="container container-lined">
+                  <div class="row">
                   <div class="col-md-4"></div>
                   <div class="col-md-4"></div>
                   <div class="col-md-4"></div>
