--- a/about-us.html
+++ b/about-us.html
@@ -173,7 +173,7 @@
         <div class="container">
           <div class="row row-40 justify-content-between">
             <div class="col-lg-7">
-              <h3 class="custom-title">Equipo</h3>
+              <h3 class="custom-title">Equipo</h3> <br> 
                 <div class="container container-lined">
                   <div class="row">
                   <div class="col-md-4"></div>
