--- a/about-us.html
+++ b/about-us.html
@@ -173,7 +173,7 @@
         <div class="container">
         <div class="row row-40 justify-content-between">
         <div class="col-lg-7">
-        <h3 class="custom-title">Equipo</h3> <br> 
+        <h3 class="custom-title">Equipo</h3>
      </section>
       <section class="section section-lg bg-gray-100 section-lined">
           <div class="container container-lined">
